# photo_georeference

./: .flake8  .pylintrc  Makefile  georeference.py  lint.sh  mypy.ini  setup.cfg
photo_georeference/: georeference.py  gpx.py  test_georeference.py
tests/: 2021-10-24 07.37.25 Week.gpx  2021-10-24 07.37.30 Week.gpx  Current.gpx  test_main.py
