[metadata]
name=photo_georeference
version = 0.0.1

[options]
packages=find:
install_requires=
    pyproj

[options.extras_require]
test =
    black
    pylint
    flake8
    flake8-import-order
    pytest

[options.entry_points]
console_scripts =
    photo_georeference_json = photo_georeference.georeference:main