[metadata]
name=photo_georeference
version = 0.0.2

[options]
packages=find:
install_requires=
    pyproj

[options.extras_require]
test =
    black
    pylint
    flake8
    flake8-import-order
    pytest
    mypy
    types-setuptools

[options.package_data]
photo_georeference =
    py.typed

[options.entry_points]
console_scripts =
    photo_georeference_json = photo_georeference.georeference:main